--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 #bets-to-be-made{
     background-color:#396522 ;
+   /* display:grid;
+    grid-template-columns: 10px 10px 10px 10px 10px 10px 
+    10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 
+    10px 10px 10px 10px 10px 10px 10px 10px 10px;
+
+    grid-template-rows:  10px 10px 10px 10px 10px 10px 10px 10px;
+
+    */
 }
