--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@ body{
 }
 
 #cash-chips >button{
-    background-color: aqua;
+    background-color: rgb(96, 94, 218);
+    padding:0;
+    border:none;
 }
 
 
@@ -25,5 +27,10 @@ background-color: rgb(30, 238, 30);
 }
 
 #remove-bet{
-    background-color: rgb(177, 27, 27);
+    background-color: rgb(137, 27, 27);
+}
+
+#black-numbers{
+   color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
 }
