--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,13 @@ background-color: rgb(30, 238, 30);
 #remove-bet{
     background-color: rgb(137, 27, 27);
 }
-
-#black-numbers{
+/* Styling for wager board*/
+.black-numbers{
    color: rgb(255, 255, 255);
 background-color: rgb(0, 0, 0);
 }
+
+.red-numbers{
+    color: rgb(255, 255, 255);
+ background-color: rgb(255, 0, 0);
+ }
