--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 #bets-to-be-made{
-    background-color:#396522 ;
-   /* display:grid;
+  background-color:rgb(7, 112, 188) ;
+  border-radius: 10%;
+  /*    display:grid;
     grid-template-columns: 10px 10px 10px 10px 10px 10px 
     10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 
     10px 10px 10px 10px 10px 10px 10px 10px 10px;
 
     grid-template-rows:  10px 10px 10px 10px 10px 10px 10px 10px;
-
-    */
+*/
+    
 }
 
 
@@ -23,7 +24,7 @@ body{
 
 
 #spin-wheel{
-background-color: rgb(30, 238, 30);
+background-color: rgb(0, 0, 0);
 }
 
 #remove-bet{
@@ -32,15 +33,23 @@ background-color: rgb(30, 238, 30);
 /* Styling for wager board*/
 .black-numbers{
    color: rgb(255, 255, 255);
-background-color: rgb(0, 0, 0);
+background-color: rgb(43, 38, 38);
+border-radius: 100%;
+border-color: rgb(0, 0, 0);
 }
 
 .red-numbers{
     color: rgb(255, 255, 255);
  background-color: rgb(255, 0, 0);
+ border-radius: 100%;
+ border-color: rgb(231, 1, 1);
+
  }
 
  .zero-btn{
     background-color: rgb(15, 226, 15);
     color: white;
+    border-radius: 100%;
+    border-color: rgb(12, 227, 16);
  }
+ 
