--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,7 @@
 #bets-to-be-made{
   background-color:rgb(7, 112, 188) ;
   border-radius: 10%;
-  /*    display:grid;
-    grid-template-columns: 10px 10px 10px 10px 10px 10px 
-    10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 10px 
-    10px 10px 10px 10px 10px 10px 10px 10px 10px;
-
-    grid-template-rows:  10px 10px 10px 10px 10px 10px 10px 10px;
-*/
-    
+ 
 }
 
 
@@ -22,13 +15,24 @@ body{
     border:none;
 }
 
-
+/* PLAY button stying*/
 #spin-wheel{
-background-color: rgb(0, 0, 0);
+background-color: rgb(255, 255, 255);
 }
+#spin-wheel:hover{
+    background-color:rgb(7, 112, 188) ;
+  border-radius: 10%;
+  color: rgb(255, 255, 255);
+    }
 
 #remove-bet{
-    background-color: rgb(137, 27, 27);
+    background-color: rgb(164, 131, 131);
+}
+
+#remove-bet:hover{
+    background-color: rgb(255, 0, 0);
+    border-radius: 10%;
+    color: rgb(255, 255, 255);
 }
 /* Styling for wager board*/
 .black-numbers{
@@ -52,4 +56,4 @@ border-color: rgb(0, 0, 0);
     border-radius: 100%;
     border-color: rgb(12, 227, 16);
  }
- 
+
